# api/models/data.js
@@ -1,17 +1,19 @@
 const mongoose = require("../database/database");
 
 const dataSchema = new mongoose.Schema({
-temperature: {
-    type: Number,
-    min: 0,
-    max: 50
-},
-humidity:{
-    type: Number,
-    min: 25,
-    max: 95
-} ,
-date: String
+    temperature: {
+        type: Number,
+        min: 0,
+        max: 50,
+        required: true
+    },
+    humidity: {
+        type: Number,
+        min: 25,
+        max: 95,
+        required: true
+    },
+    date: String
 });
 
 
